--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,8 +12,9 @@ services:
     environment:
       - PRODUCTION='true'
       - SECRET_KEY=${DJANGO_SECRET_KEY}
-      - PG_PASSWORD=${PG_PASSWORD}
-      - PG_USER=${PG_USER}
+      - SQL_PASSWORD=${PG_PASSWORD}
+      - SQL_USER=${PG_USER}
+      - SQL_DATABASE=${PG_DATABASE}
     expose:
       - 8000
     volumes:
