adding websocket support

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -66,6 +66,10 @@ http {
             # redirects, we set the Host: header above already.
             proxy_redirect off;
             proxy_pass http://frontend;
+            # WebSocket support added
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
 
     }
