--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 PG_PASSWORD=1234
 PG_USER=postgres
+PG_DATABASE=projectdatabasse
 DJANGO_SECRET_KEY=1fc^o7g&xtuw72m$i!*9f3_n^p_u=bg@xnh+xx$^=z83!6-q
