--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -7,8 +7,9 @@ verify_ssl = true
 
 [packages]
 django = "==3.0.3"
-gunicorn= "==20.0.4"
+gunicorn = "==20.0.4"
 djangorestframework = "==3.11.0"
+djangorestframework-simplejwt = "==4.4.0"
 
 [requires]
 python_version = "3.8"
