--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - db
-    command: ["./entrypoint.sh"]
+    command: sh ./entrypoint.sh
     container_name: backend
     environment:
       - SECRET_KEY=${DJANGO_SECRET_KEY}
@@ -37,6 +37,17 @@ services:
     volumes:
       - './frontend:/app'
       - /app/node_modules
+
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+    ports:
+      - "${PGADMIN_PORT:-5050}:80"
+    logging:
+      driver: none
 
 volumes:
   static_volume:
