--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - db
-    command: ["./entrypoint.sh"]
+    command: "./entrypoint.sh"
     container_name: backend
     environment:
       - PRODUCTION='true'
