--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -4,6 +4,9 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+factory_boy = "*"
+model_bakery = "*"
+Faker = "*"
 
 [packages]
 django = "==3.0.3"
