Email Setup and creating reset forgot email views"

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -14,6 +14,7 @@ services:
       - SQL_PASSWORD=${PG_PASSWORD}
       - SQL_USER=${PG_USER}
       - SQL_DATABASE=${PG_DATABASE}
+      - SENDGRID_API_KEY=${SENDGRID_API_KEY}
     expose:
       - 8000
     volumes:
