--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -13,6 +13,7 @@ django = "==3.0.3"
 gunicorn = "==20.0.4"
 djangorestframework = "==3.11.0"
 djangorestframework-simplejwt = "==4.4.0"
+sendgrid = "*"
 
 [requires]
 python_version = "3.8"
