--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - POSTGRES_PASSWORD=${PG_PASSWORD}
       - POSTGRES_USER=${PG_USER}
-      - POSTGRES_DB=${PG_DATABASE}
+      - POSTGRES_DB=${POSTGRES_DB}
     container_name: db
     ports:
       - "5435:5432"
